<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConstraintLayout">

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/home"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/add_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:src="@drawable/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="10dp"
        android:layout_toStartOf="@id/add_image"
        android:src="@drawable/search"
        app:layout_constraintEnd_toStartOf="@+id/add_image"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/my_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_image"
        android:text="@string/my_work"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_text" />

    <ImageView
        android:id="@+id/three_dots"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/home_text"
        android:layout_alignParentEnd="true"
        android:src="@drawable/three_dots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_image" />


    <ImageView
        android:id="@+id/issues_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/my_work"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/issues"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_work" />


    <TextView
        android:id="@+id/issues_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_work"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/issues_image"
        android:text="@string/issues"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/issues_image"
        app:layout_constraintTop_toBottomOf="@+id/my_work" />


    <ImageView
        android:id="@+id/pull_request_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/issues_image"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/pull_request"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issues_image" />

    <TextView
        android:id="@+id/pull_request_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/issues_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@id/pull_request_image"
        android:text="@string/pull_request"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/pull_request_image"
        app:layout_constraintTop_toBottomOf="@+id/issues_text" />


    <ImageView
        android:id="@+id/discussions_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/pull_request_image"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/discussions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pull_request_image" />

    <TextView
        android:id="@+id/discussions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pull_request_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@id/discussions_image"
        android:text="@string/discussions"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/discussions_image"
        app:layout_constraintTop_toBottomOf="@+id/pull_request_text" />


    <ImageView
        android:id="@+id/repositories_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/discussions_image"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/repositories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discussions_image" />

    <TextView
        android:id="@+id/repositories_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/discussions_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@id/repositories_image"
        android:text="@string/repositories"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/repositories_image"
        app:layout_constraintTop_toBottomOf="@+id/discussions_text" />


    <ImageView
        android:id="@+id/organization_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/repositories_image"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/organization"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repositories_image" />

    <TextView
        android:id="@+id/organization_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/repositories_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@id/repositories_image"
        android:text="@string/organization"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/organization_image"
        app:layout_constraintTop_toBottomOf="@+id/repositories_text" />

    <TextView
        android:id="@+id/favourites_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/organization_text"
        android:layout_margin="22dp"
        android:text="@string/favourites"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organization_image" />

    <TextView
        android:id="@+id/favourites_child_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/favourites_text"

        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/favourites_child"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourites_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/favourites_child_text"
        android:layout_margin="10dp"
        android:backgroundTint="@color/grey"
        android:text="@string/add_favorite"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourites_child_text" />

</androidx.constraintlayout.widget.ConstraintLayout>